syntax = "proto3";

import "Feature.proto";

option java_multiple_files = true;
option java_package = "pathfinder.data";

package data;

message SourceModuleDbo {
  string source_id = 1;
  repeated FeatureSummaryDbo features = 2;
}